--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="mt-8">
           <div class="relative aspect-[16/9] w-full rounded-3xl overflow-hidden">
             <img
-              src="https://raw.githubusercontent.com/namehdw-web/chaebin-birthday/main/%EC%B1%84%EB%B9%88_birth.jpg"
+              src="https://raw.githubusercontent.com/namehdw-web/chaebin-birthday/main/%EC%B1%84%EB%B9%88_birth2.jpg"
               alt="chaebin"
               class="w-full h-full object-cover rounded-3xl"
             />
