--- a/index.html
+++ b/index.html
@@ -5,15 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>한채빈 첫돌 초대장</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    function copyLink() {
-      navigator.clipboard.writeText(window.location.href).then(function() {
-        alert("✨ 링크가 복사되었습니다!");
-      }, function() {
-        alert("링크 복사에 실패했어요. 주소창의 링크를 직접 복사해주세요.");
-      });
-    }
-  </script>
 </head>
 <body class="antialiased">
   <div class="min-h-screen bg-gradient-to-b from-rose-50 via-amber-50 to-white text-zinc-800">
@@ -27,7 +18,7 @@
               <stop offset="100%" stop-color="#e9d5ff" />
             </linearGradient>
           </defs>
-          <rect width="701" height="1501" fill="url(#g1)" />
+          <rect width="1440" height="560" fill="url(#g1)" />
         </svg>
       </div>
 
@@ -35,7 +26,6 @@
         <div class="flex items-center justify-between gap-4">
           <h1 class="text-xl font-semibold tracking-tight">🎂 Chaebin's 1st Birthday 🎉</h1>
           <nav class="flex gap-2 text-sm">
-            <a href="#schedule" class="rounded-full px-3 py-1 bg-white/70 hover:bg-white shadow-sm">일정</a>
             <a href="#location" class="rounded-full px-3 py-1 bg-white/70 hover:bg-white shadow-sm">오시는 길</a>
             <a href="#parking" class="rounded-full px-3 py-1 bg-white/70 hover:bg-white shadow-sm">주차 안내</a>
           </nav>
@@ -74,16 +64,15 @@
           <div class="mt-6 flex flex-col sm:flex-row items-center justify-center gap-3">
             <a href="https://map.naver.com/v5/search/%EC%8B%A0%EB%9D%BC%EC%8A%A4%ED%85%8C%EC%9D%B4%20%EC%97%AD%EC%82%BC" class="rounded-full px-5 py-3 bg-zinc-900 text-white hover:bg-zinc-800" target="_blank">📍 지도 열기 (네이버)</a>
             <a href="https://maps.google.com/?q=%EC%8B%A0%EB%9D%BC%EC%8A%A4%ED%85%8C%EC%9D%B4%20%EC%97%AD%EC%82%BC" class="rounded-full px-5 py-3 bg-white border hover:bg-zinc-50" target="_blank">📍 지도 열기 (Google)</a>
-            <button onclick="copyLink()" class="rounded-full px-5 py-3 bg-white border hover:bg-zinc-50">🔗 링크 복사</button>
           </div>
         </div>
 
         <div class="mt-8">
-          <div class="relative aspect-[16/9] w-full rounded-3xl overflow-hidden">
+          <div class="relative w-full rounded-3xl overflow-hidden">
             <img
               src="https://raw.githubusercontent.com/namehdw-web/chaebin-birthday/main/%EC%B1%84%EB%B9%88_birth2.jpg"
               alt="chaebin"
-              class="w-full h-full object-cover rounded-3xl"
+              class="w-full h-auto object-contain rounded-3xl"
             />
           </div>
         </div>
@@ -91,8 +80,6 @@
     </header>
 
     <main class="mx-auto max-w-3xl px-6 pb-24">
-      
-
       <section id="location" class="mt-12">
         <h3 class="text-2xl font-semibold">📍 오시는 길</h3>
         <p class="mt-3 text-zinc-700">신라스테이 역삼 Cafe (3층) · 서울특별시 강남구</p>
@@ -117,7 +104,6 @@
       <div class="mx-auto max-w-3xl px-6 py-8 flex flex-col sm:flex-row items-center justify-between gap-3">
         <div class="text-sm text-zinc-600">© 2025 Chaebin's 1st Birthday 🎂</div>
         <div class="flex items-center gap-2">
-          <button onclick="copyLink()" class="rounded-full px-4 py-2 bg-zinc-900 text-white hover:bg-zinc-800 text-sm">🔗 링크 복사</button>
           <a href="#top" class="rounded-full px-4 py-2 bg-white border hover:bg-zinc-50 text-sm">⬆️ 맨 위로</a>
         </div>
       </div>
