--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="mt-8">
           <div class="relative w-full rounded-3xl overflow-hidden">
             <img
-              src="https://raw.githubusercontent.com/namehdw-web/chaebin-birthday/main/%EC%B1%84%EB%B9%88_birth2.jpg"
+              src="https://raw.githubusercontent.com/namehdw-web/chaebin-birthday/main/%EC%B1%84%EB%B9%88_birth.jpg"
               alt="chaebin"
               class="w-full h-auto object-contain rounded-3xl"
             />
