--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
           <div class="mt-6 flex flex-col sm:flex-row items-center justify-center gap-3">
             <a href="https://map.naver.com/v5/search/%EC%8B%A0%EB%9D%BC%EC%8A%A4%ED%85%8C%EC%9D%B4%20%EC%97%AD%EC%82%BC" class="rounded-full px-5 py-3 bg-zinc-900 text-white hover:bg-zinc-800" target="_blank">📍 지도 열기 (네이버)</a>
-            <a href="https://maps.google.com/?q=%EC%8B%A0%EB%9D%BC%EC%8A%A4%ED%85%8C%EC%9D%B4%20%EC%97%AD%EC%82%BC" class="rounded-full px-5 py-3 bg-white border hover:bg-zinc-50" target="_blank">📍 지도 열기 (Google)</a>
+            <a href="https://map.kakao.com/link/search/신라스테이%20역삼" class="rounded-full px-5 py-3 bg-white border hover:bg-zinc-50" target="_blank">📍 지도 열기 (카카오)</a>
           </div>
         </div>
 
-        <div class="mt-6">
+        <div class="mt-4 mb-4">
           <div class="relative w-full rounded-3xl overflow-hidden">
             <img
               src="https://raw.githubusercontent.com/namehdw-web/chaebin-birthday/main/%EC%B1%84%EB%B9%88_birth.jpg"
@@ -56,7 +56,7 @@
       </div>
     </header>
 
-    <main class="mx-auto max-w-3xl px-6 pb-24">
+    <main class="mx-auto max-w-3xl px-6 pb-16">
       <section id="location" class="mt-8">
         <h3 class="text-2xl font-semibold">📍 오시는 길</h3>
         <p class="mt-3 text-zinc-700">신라스테이 역삼 Cafe (3층) · 서울특별시 강남구</p>
@@ -69,8 +69,7 @@
             title="map"
             class="w-full h-[320px]"
             loading="lazy"
-            src="https://maps.google.com/maps?q=%EC%8B%A0%EB%9D%BC%EC%8A%A4%ED%85%8C%EC%9D%B4%20%EC%97%AD%EC%82%BC&output=embed"
-            allowfullscreen
+            src="https://map.naver.com/v5/search/%EC%8B%A0%EB%9D%BC%EC%8A%A4%ED%85%8C%EC%9D%B4%20%EC%97%AD%EC%82%BC"
           ></iframe>
         </div>
       </section>
@@ -82,7 +81,7 @@
     </main>
 
     <footer class="border-t bg-white/70">
-      <div class="mx-auto max-w-3xl px-6 py-8 flex flex-col sm:flex-row items-center justify-between gap-3">
+      <div class="mx-auto max-w-3xl px-6 py-6 flex flex-col sm:flex-row items-center justify-between gap-3">
         <div class="text-sm text-zinc-600">© 2025 Chaebin's 1st Birthday 🎂</div>
         <div class="flex items-center gap-2">
           <a href="#top" class="rounded-full px-4 py-2 bg-white border hover:bg-zinc-50 text-sm">⬆️ 맨 위로</a>
