--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
           <div class="mt-6 flex flex-col sm:flex-row items-center justify-center gap-3">
             <a href="https://maps.google.com/?q=신라스테이%20역삼" class="rounded-full px-5 py-3 bg-zinc-900 text-white hover:bg-zinc-800" target="_blank">📍 지도 열기 (Google)</a>
+            <a href="https://map.naver.com/v5/search/신라스테이%20역삼" class="rounded-full px-5 py-3 bg-white border hover:bg-zinc-50" target="_blank">📍 지도 열기 (네이버)</a>
           </div>
         </div>
 
