--- a/index.html
+++ b/index.html
@@ -46,7 +46,23 @@
 
         <div class="mt-4 mb-2">
           <div class="relative w-full rounded-3xl overflow-hidden">
-          차
+            <img
+              src="https://raw.githubusercontent.com/namehdw-web/chaebin-birthday/main/%EC%B1%84%EB%B9%88_birth.jpg"
+              alt="chaebin"
+              class="w-full h-auto object-contain rounded-3xl"
+            />
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main class="mx-auto max-w-3xl px-6 pb-12">
+      <section id="location" class="mt-8">
+        <h3 class="text-2xl font-semibold">📍 오시는 길</h3>
+        <p class="mt-3 text-zinc-700">신라스테이 역삼 Cafe (3층) · 서울특별시 강남구</p>
+        <p class="mt-2 text-zinc-600 text-sm leading-relaxed">
+          🚇 지하철 2호선 역삼역 8번 출구 도보 10분<br/>
+          🚌 버스 간선 141, 242, 361 → KT강남지사 하차 후 도보 1분
         </p>
         <div class="mt-4 rounded-2xl overflow-hidden border">
           <iframe
