--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
           <p class="text-sm uppercase tracking-widest text-zinc-500">💌 첫돌 초대장 🎈</p>
           <h2 class="mt-2 text-3xl sm:text-4xl font-bold">한채빈 첫돌 🥰</h2>
           <p class="mt-3 text-zinc-600 leading-relaxed">
-            <span class="block">아기 채빈이가 여러분의 사랑 속에서 무럭무럭 자라</span>
-            <span class="block">첫 생일을 맞이했습니다. 🐉🎂🎈</span>
+            <span class="block">아기 채빈이가 🐉</span>
+            <span class="block">여러분의 사랑속에서 무럭무럭 자라 🌱</span>
+            <span class="block">첫 생일을 맞이했습니다 🎂</span>
 
-            <span class="block mt-3">따뜻한 축하로 함께해 주신다면</span>
-            <span class="block">저희 가족의 큰 행복으로 간직하겠습니다. 💕🌟</span>
+            <span class="block mt-3">따뜻한 축하로 함께해주신다면 🙏</span>
+            <span class="block">저희가족의 큰 행복으로 💕</span>
+            <span class="block">간직하겠습니다 🌟</span>
           </p>
 
           <div class="mt-6 grid grid-cols-1 sm:grid-cols-3 gap-3 text-sm">
@@ -61,8 +63,8 @@
         <h3 class="text-2xl font-semibold">📍 오시는 길</h3>
         <p class="mt-3 text-zinc-700">신라스테이 역삼 Cafe (3층) · 서울특별시 강남구</p>
         <p class="mt-2 text-zinc-600 text-sm leading-relaxed">
-          🚇 지하철 2호선 역삼역 8번 출구 도보 10분<br/>
-          🚌 버스 간선 141, 242, 361 → KT강남지사 하차 후 도보 1분
+          🚇 지하철 2호선 역삼역 3번 출구 도보 5분<br/>
+          🚌 버스 간선 146, 341, 360 → 역삼역 하차 후 도보 3분
         </p>
         <div class="mt-4 rounded-2xl overflow-hidden border">
           <iframe
