--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <h3 class="text-2xl font-semibold">📍 오시는 길</h3>
         <p class="mt-3 text-zinc-700">신라스테이 역삼 Cafe (3층) · 서울특별시 강남구</p>
         <p class="mt-2 text-zinc-600 text-sm leading-relaxed">
-          🚇 지하철 2호선 역삼역 3번 출구 도보 5분<br/>
-          🚌 버스 간선 146, 341, 360 → 역삼역 하차 후 도보 3분
+          🚇 지하철 2호선 역삼역 8번 출구 도보 10분<br/>
+          🚌 버스 141, 242, 361 → KT 강남지사 하차 후 도보 1분
         </p>
         <div class="mt-4 rounded-2xl overflow-hidden border">
           <iframe
