--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
             <span class="block">간직하겠습니다 🌟</span>
           </p>
 
-          <div class="mt-6 grid grid-cols-1 sm:grid-cols-3 gap-3 text-sm">
+          <div class="mt-6 grid grid-cols-1 sm:grid-cols-3 gap-3 text-lg">
             <div class="rounded-2xl border bg-white p-4">
               <div class="font-medium">📅 날짜</div>
-              <div class="mt-1 text-lg">2025년 9월 20일 (토)</div>
+              <div class="mt-1">2025년 9월 20일 (토)</div>
             </div>
             <div class="rounded-2xl border bg-white p-4">
               <div class="font-medium">⏰ 시간</div>
-              <div class="mt-1 text-lg">오후 5:00</div>
+              <div class="mt-1">오후 5:00</div>
             </div>
             <div class="rounded-2xl border bg-white p-4">
               <div class="font-medium">📍 장소</div>
-              <div class="mt-1 text-lg">신라스테이 역삼 (3층)</div>
+              <div class="mt-1">신라스테이 역삼(3층)</div>
             </div>
           </div>
 
