--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="mt-10 rounded-3xl bg-white/70 backdrop-blur shadow-xl p-6 sm:p-10 text-center">
           <p class="text-sm uppercase tracking-widest text-zinc-500">💌 첫돌 초대장 🎈</p>
           <h2 class="mt-2 text-3xl sm:text-4xl font-bold">한채빈 첫돌 🥰</h2>
-          <p class="mt-3 text-zinc-600 leading-relaxed">
+          <p class="mt-3 text-lg text-zinc-600 leading-relaxed">
             <span class="block">아기 채빈이가 🐉</span>
             <span class="block">여러분의 사랑속에서 무럭무럭 자라 🌱</span>
             <span class="block">첫 생일을 맞이했습니다 🎂</span>
