--- a/index.html
+++ b/index.html
@@ -13,16 +13,8 @@
         <h1 class="text-xl font-semibold tracking-tight">🎂 Chaebin's 1st Birthday 🎉</h1>
 
         <div class="mt-10 rounded-3xl bg-white/70 backdrop-blur shadow-xl p-6 sm:p-10 text-center">
-          <p class="text-sm uppercase tracking-widest text-zinc-500">💌 첫돌 초대장 🎈</p>
+          <p class="text-base uppercase tracking-widest text-zinc-500">💌 첫돌 초대장 🎈</p>
           <h2 class="mt-2 text-3xl sm:text-4xl font-bold">한채빈 첫돌 🥰</h2>
-          <p class="mt-3 text-lg text-zinc-600 leading-relaxed">
-            <span class="block">아기 채빈이가 🐉</span>
-            <span class="block">여러분의 사랑속에서 무럭무럭 자라 🌱</span>
-            <span class="block">첫 생일을 맞이했습니다 🎂</span>
-
-            <span class="block mt-3">따뜻한 축하로 함께해주신다면 🙏</span>
-            <span class="block">저희 가족의 큰 행복으로 💕</span>
-            <span class="block">간직하겠습니다 🌟</span>
           </p>
 
           <div class="mt-6 grid grid-cols-1 sm:grid-cols-3 gap-3 text-lg">
@@ -36,7 +28,7 @@
             </div>
             <div class="rounded-2xl border bg-white p-4">
               <div class="font-medium">📍 장소</div>
-              <div class="mt-1">신라스테이 역삼(3층)</div>
+              <div class="mt-1">신라스테이 역삼<br>(3층)</div>
             </div>
           </div>
 
