--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="text-xl font-semibold tracking-tight">🎂 Chaebin's 1st Birthday 🎉</h1>
 
         <div class="mt-10 rounded-3xl bg-white/70 backdrop-blur shadow-xl p-6 sm:p-10 text-center">
-          <p class="text-base uppercase tracking-widest text-zinc-500">💌 첫돌 초대장 🎈</p>
+          <p class="text-sm uppercase tracking-widest text-zinc-500">💌 첫돌 초대장 🎈</p>
           <h2 class="mt-2 text-3xl sm:text-4xl font-bold">한채빈 첫돌 🥰</h2>
           </p>
 
