--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="antialiased">
-  <div class="min-h-screen bg-gradient-to-b from-rose-50 via-amber-50 to-white text-zinc-800">
+  <div class="min-h-screen bg-gradient-to-b from-rose-50 via-amber-50 to-white text-zinc-800" id="top">
     <header class="relative overflow-hidden">
       <div class="mx-auto max-w-3xl px-6 pt-14 pb-10 sm:pt-20 sm:pb-16">
         <h1 class="text-xl font-semibold tracking-tight">🎂 Chaebin's 1st Birthday 🎉</h1>
 
         <div class="mt-10 rounded-3xl bg-white/70 backdrop-blur shadow-xl p-6 sm:p-10 text-center">
+          <!-- 한 단계 크게: text-sm -> text-base -->
           <p class="text-base uppercase tracking-widest text-zinc-500">💌 첫돌 초대장 🎈</p>
+
           <h2 class="mt-2 text-3xl sm:text-4xl font-bold">한채빈 첫돌 🥰</h2>
 
           <div class="mt-6 grid grid-cols-1 sm:grid-cols-3 gap-3 text-lg">
@@ -27,13 +29,19 @@
             </div>
             <div class="rounded-2xl border bg-white p-4">
               <div class="font-medium">📍 장소</div>
-              <div class="mt-1">신라스테이 역삼<br>(3층)</div>
+              <div class="mt-1">
+                신라스테이 역삼<br>(3층)
+              </div>
             </div>
           </div>
 
           <div class="mt-6 flex flex-col sm:flex-row items-center justify-center gap-3">
-            <a href="https://maps.google.com/?q=신라스테이%20역삼" class="rounded-full px-5 py-3 bg-zinc-900 text-white hover:bg-zinc-800" target="_blank">📍 지도 열기 (Google)</a>
-            <a href="https://map.naver.com/v5/search/신라스테이%20역삼" class="rounded-full px-5 py-3 bg-white border hover:bg-zinc-50" target="_blank">📍 지도 열기 (네이버)</a>
+            <a href="https://maps.google.com/?q=%EC%8B%A0%EB%9D%BC%EC%8A%A4%ED%85%8C%EC%9D%B4%20%EC%97%AD%EC%82%BC"
+               class="rounded-full px-5 py-3 bg-zinc-900 text-white hover:bg-zinc-800"
+               target="_blank" rel="noopener noreferrer">📍 지도 열기 (Google)</a>
+            <a href="https://map.naver.com/v5/search/%EC%8B%A0%EB%9D%BC%EC%8A%A4%ED%85%8C%EC%9D%B4%20%EC%97%AD%EC%82%BC"
+               class="rounded-full px-5 py-3 bg-white border hover:bg-zinc-50"
+               target="_blank" rel="noopener noreferrer">📍 지도 열기 (네이버)</a>
           </div>
         </div>
 
@@ -43,7 +51,7 @@
               src="https://raw.githubusercontent.com/namehdw-web/chaebin-birthday/main/%EC%B1%84%EB%B9%88_birth.jpg"
               alt="chaebin"
               class="w-full h-auto object-contain rounded-3xl"
-            />
+              decoding="async" />
           </div>
         </div>
       </div>
@@ -54,7 +62,7 @@
         <h3 class="text-2xl font-semibold">📍 오시는 길</h3>
         <p class="mt-3 text-zinc-700">신라스테이 역삼 Cafe (3층) · 서울특별시 강남구</p>
         <p class="mt-2 text-zinc-600 text-sm leading-relaxed">
-          🚇 지하철 2호선 역삼역 8번 출구 도보 10분<br/>
+          🚇 지하철 2호선 역삼역 8번 출구 도보 10분<br>
           🚌 버스 141, 242, 361 → KT 강남지사 하차 후 도보 1분
         </p>
         <div class="mt-4 rounded-2xl overflow-hidden border">
@@ -62,8 +70,8 @@
             title="map"
             class="w-full h-[320px]"
             loading="lazy"
-            src="https://maps.google.com/maps?q=신라스테이%20역삼&output=embed"
-          ></iframe>
+            src="https://maps.google.com/maps?q=%EC%8B%A0%EB%9D%BC%EC%8A%A4%ED%85%8C%EC%9D%B4%20%EC%97%AD%EC%82%BC&output=embed"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </section>
 
