--- a/index.html
+++ b/index.html
@@ -13,11 +13,24 @@
         <h1 class="text-xl font-semibold tracking-tight">🎂 Chaebin's 1st Birthday 🎉</h1>
 
         <div class="mt-10 rounded-3xl bg-white/70 backdrop-blur shadow-xl p-6 sm:p-10 text-center">
-          <!-- 한 단계 크게: text-sm -> text-base -->
+          <!-- 상단 소제목 -->
           <p class="text-base uppercase tracking-widest text-zinc-500">💌 첫돌 초대장 🎈</p>
 
+          <!-- 메인 제목 -->
           <h2 class="mt-2 text-3xl sm:text-4xl font-bold">한채빈 첫돌 🥰</h2>
 
+          <!-- 초대 문구 -->
+          <p class="mt-4 text-base sm:text-lg text-zinc-600 leading-relaxed">
+            <span class="block">아기 채빈이가 🐉</span>
+            <span class="block">여러분의 사랑속에서 무럭무럭 자라 🌱</span>
+            <span class="block">첫 생일을 맞이했습니다 🎂</span>
+
+            <span class="block mt-3">따뜻한 축하로 함께해주신다면 🙏</span>
+            <span class="block">저희 가족의 큰 행복으로 💕</span>
+            <span class="block">간직하겠습니다 🌟</span>
+          </p>
+
+          <!-- 날짜/시간/장소 -->
           <div class="mt-6 grid grid-cols-1 sm:grid-cols-3 gap-3 text-lg">
             <div class="rounded-2xl border bg-white p-4">
               <div class="font-medium">📅 날짜</div>
@@ -35,6 +48,7 @@
             </div>
           </div>
 
+          <!-- 지도 버튼 -->
           <div class="mt-6 flex flex-col sm:flex-row items-center justify-center gap-3">
             <a href="https://maps.google.com/?q=%EC%8B%A0%EB%9D%BC%EC%8A%A4%ED%85%8C%EC%9D%B4%20%EC%97%AD%EC%82%BC"
                class="rounded-full px-5 py-3 bg-zinc-900 text-white hover:bg-zinc-800"
@@ -45,6 +59,7 @@
           </div>
         </div>
 
+        <!-- 아기 사진 -->
         <div class="mt-4 mb-2">
           <div class="relative w-full rounded-3xl overflow-hidden">
             <img
@@ -58,6 +73,7 @@
     </header>
 
     <main class="mx-auto max-w-3xl px-6 pb-12">
+      <!-- 오시는 길 -->
       <section id="location" class="mt-8">
         <h3 class="text-2xl font-semibold">📍 오시는 길</h3>
         <p class="mt-3 text-zinc-700">신라스테이 역삼 Cafe (3층) · 서울특별시 강남구</p>
@@ -75,12 +91,14 @@
         </div>
       </section>
 
+      <!-- 주차 안내 -->
       <section id="parking" class="mt-12">
         <h3 class="text-2xl font-semibold">🅿️ 주차 안내</h3>
         <p class="mt-3 text-zinc-700">🚗 행사장 건물 내 주차장을 이용하실 수 있습니다. (3시간 무료)</p>
       </section>
     </main>
 
+    <!-- 푸터 -->
     <footer class="border-t bg-white/70">
       <div class="mx-auto max-w-3xl px-6 py-6 flex flex-col sm:flex-row items-center justify-between gap-3">
         <div class="text-sm text-zinc-600">© 2025 Chaebin's 1st Birthday 🎂</div>
